Add support for annotating Assert steps

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     .queued { background-color: #dff; }
     .parallel { background-color: #cfc;}
     .main > .main, .main :not(.parallel) .main, .parallel > .parallel, .parallel :not(.main) .parallel { background-color: none;}
+    .assert { color: lime;}
     .init { color: green;}
     .return { color: red;}
     .jump { color: blue;}
